# xmonad-compton

./: xmonad-compton.cabal
src/XMonad/: Compton.hs
