name:                xmonad-compton
version:             0.0.1
license:             GPL-3
license-file:        LICENSE
author:              kurnevsky
maintainer:          kurnevsky@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     XMonad.Compton
  build-depends:       base,
                       X11,
                       xmonad,
                       dbus
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -O2

